[project]
name = "billboard_yt_playlist_creator"
version = "0.2.0"
description = "A script that creates YouTube playlists for Billboard charts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "billboard-py>=7.1.0",
    "google-api-python-client>=2.188.0",
    "oauth2client>=4.1.3",
]

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
